Update test-cases
Signed-off-by: Andy Kwok <andy.kwok@improving.com>